--- a/BIG DATA PROYECT/DATA COLLECTION/Scraping Latina.ipynb
+++ b/BIG DATA PROYECT/DATA COLLECTION/Scraping Latina.ipynb
@@ -20,9 +20,9 @@
     "from time import sleep\n",
     "import time\n",
     "import keyboard\n",
-    "import pyautogui as pa\n",
+    "import pyautogui as pa  # automatizacion de tareas relcionds con la interfaz grafica\n",
     "from selenium.webdriver.support import expected_conditions as EC\n",
-    "import datetime \n",
+    "import datetime #controlar y manipul<r  un nav web, open url , etc\n",
     "import subprocess\n",
     "import re\n"
    ]
@@ -68,7 +68,7 @@
     "    time.sleep(2)\n",
     "    for i in range(5,31):\n",
     "        \n",
-    "        b = drive.find_elements(\"xpath\",'/html/body/div[9]/section[2]/div/div['+str(i)+']')\n",
+    "        b = drive.find_elements(\"xpath\",'/html/body/div[9]/section[2]/div/div['+str(i)+']')## buscar en esta ruta etiquets\n",
     "        text = ''\n",
     "        for b in b:\n",
     "            text += b.text\n",
