--- a/BIG DATA PROYECT/MACHINE LEARNING AND ANALYTICS/Crear el entorno (Data Lake).ipynb
+++ b/BIG DATA PROYECT/MACHINE LEARNING AND ANALYTICS/Crear el entorno (Data Lake).ipynb
@@ -44,15 +44,21 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
-     "nuid": "26169460-86ca-4a9c-af56-b8b6deb6ac57",
+     "nuid": "1722da97-5a04-495b-894d-b049154a7b9d",
      "showTitle": false,
      "title": ""
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Desmontar el punto de montaje existente\n",
+    "dbutils.fs.unmount(\"/mnt/crimesdl/raw\")"
+   ]
   },
   {
    "cell_type": "code",
